# OSLabs

./: .gitignore  CMakeLists.txt  README.md  update_project.bat  update_project.sh
code_examples/2.shared-mem/: test.cpp
code_examples/3.network/1.udp-example/: CMakeLists.txt  client.cpp  server.cpp
code_examples/3.network/2.tcp-example/: client.cpp  server.cpp
code_examples/3.network/3.html_temp_server/comp/ntd/: CMakeLists.txt  ntd.cpp
code_examples/3.network/3.html_temp_server/mcu/udp_temp_server/: Makefile  main.c
code_examples/3.network/4.xdr-example/: example.cpp
code_examples/4.serial/: test.cpp
code_examples/5.guiapps/win32/: build.cmd  gui_hello.exe.manifest  main.c
code_examples/5.guiapps/x11/: build.sh  hello-gui.c
code_examples/6.qt-serial/TempDriver/: TempDriver.pro  TempWindow.cpp  TempWindow.h  TempWindow.ui  main.cpp
code_examples/6.qt-serial/TempEmulator/: TempDeviceEmulator.cpp  TempDeviceEmulator.h  TempEmulator.pro  main.cpp
lab1/: hello_world.cpp  main.c  update_project.bat  update_project.sh
lab2/: background.hpp  test.cpp
lab3/: CMakeLists.txt  main.cpp  shmem.hpp
lab4/: CMakeLists.txt  build_and_run.bat  build_and_run.sh  emulator.cpp  logger.cpp  posix_test.sh
lab5/: CMakeLists.txt  build_and_run.bat  build_and_run.sh  database.hpp  httpserver.hpp  main_server.cpp  requirements.txt  temperature_client.py  temperature_logger.hpp
lab5/templates/: dashboard.html  statistics.html
lab6/: CMakeLists.txt  build_and_run.bat  build_and_run.sh  database.hpp  httpserver.hpp  main_gui.cpp  temperature_logger.hpp  temperature_monitor_gui.cpp  temperature_monitor_gui.h
